<resources>
    <string name="app_name">Maraton</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="next">Następny</string>
    <string name="NN">\???</string>
    <string name="actExerciseList_title">Ćwiczenia</string>
    <string name="amount_question">Liczba wykonanych powtórzeń ćwiczenia:</string>
    <string name="time_question">Poświęcony na ćwiczenie czas[min]:</string>
    <string name="crow_question">Rekord liczby wypowiedzanych wron:</string>

    <!--Stoper-->
    <string name="timerVal"> 00:00:0 </string>
    <string name="timerTime"> 00:00 </string>
    <string name="startButtonLabel">Start</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="resetButtonLabel">Reset</string>

    <!--NavBar-->
    <string name="stopwatch">Stoper</string>
    <string name="exercisesList">Ćwiczenia</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer">Timer</string>
    <string name="minutes">Minuty:</string>
    <string name="seconds">Sekundy</string>
    <string name="records">Nagrania</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Zaloguj lub zarejestruj.</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Podany adres email jest nieprawidłowy.</string>
    <string name="error_invalid_password">Podane hasło jest zbyt krótkie.</string>
    <string name="error_incorrect_password">Podane hasło jest nieprawidłowe.</string>
    <string name="error_field_required">To pole jest obowiązkowe.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Logowanie</string>
    <string name="changeToSingUp">Nie posiadasz konta?</string>
    <string name="changeToSingIn">Posiadasz już konto?</string>
    <string name="signIn">Zaloguj</string>
    <string name="signUp">Rejestracja</string>
    <string name="logout">Wyloguj</string>
    <string name="password">Hasło</string>
    <string name="email">E-mail</string>
    <string name="calendar">Kalendarz</string>
    <string name="end_training">Zakończ trening</string>
    <string name="toast_recording_finish">Nagranie zapisane do</string>
    <string name="record">Nagranie</string>
    <string name="skip">Pomiń</string>
    <string name="back">Wstecz</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="ok">Ok</string>
    <string name="chose_exercises">Wybierz ćwiczenia</string>
    <string name="welcome">Witaj w aplikacji</string>
    <string name="permission_needed">Musisz majpierw się zalogować\ni nadać uprawnienia aplikacji</string>
    <string name="persmission_to_storage">Uprawnień do pamięci,
        aby przechowywać ćwiczenia</string>
    <string name="persmission_to_voice">Uprawnień do nagrywania dźwięku,
        aby nagrywać ćwiczenia (tylko, kiedy użytkownik włączy nagrywanie)</string>
    <string name="login_successful">Logowanie się powiodło.</string>
    <string name="logout_successful">Wylogowanie się powiodło.</string>
    <string name="register_successful">Rejestracja się powiodła.</string>
    <string name="chose_trening_dialog">Musisz najpierw wybrać zestaw ćwiczeń</string>
    <string name="you_have_chosen">Wybrałeś:</string>
    <string name="chooseEvening">Zmień wieczorne ćwiczenia</string>
    <string name="chooseMorning">Zmień poranne ćwiczenia </string>
    <string name="logut_successful">Nastąpiło wylogowanie.</string>
    <string name="grant">Przyznaj i zaloguj</string>
    <string name="define_your_own_exercises_group">Dodaj własną grupę ćwiczeń\n+</string>
    <string name="chooseTitle">Wybierz tytuł grupy</string>
    <string name="title_hint">Wprowadź tytuł</string>
    <string name="next_step">Przejdź dalej</string>
    <string name="no_training_this_day">Brak porannych/wieczornych ćwiczeń tego dnia.</string>
    <string name="tap_info">Wybierz datę</string>
    <string name="mood_question">Jak Ci się dzisiaj mówiło?</string>
    <string name="no_mood_selected">Wybierz buźkę.</string>
    <string name="no_exercises_chosen">Musisz wybrać min. jedno ćwiczenie.</string>
    <string name="chooser_info_message">Wybierz ćwiczenia, które będziesz wykonywać</string>
    <string name="atMorning">rano.</string>
    <string name="atEvening">wieczorem.</string>
    <string name="lets_begin">Zaczynamy</string>
    <string name="end_training_question">Czy chcesz zakończyć?</string>
    <string name="cancel">Anuluj</string>
    <string name="end">Zakończ</string>
    <string name="end_and_save_training_question">Czy chcesz zakończyć i zapisać ćwiczenia?</string>
    <string name="save">Zapisz</string>
    <string name="only_end">Tylko zakończ</string>
    <string name="prepare_app_success">Aplikacja została przygotowana do użycia.</string>
    <string name="prepare_app_failed">Wystąpił błąd przy konfiguracji aplikacji.</string>
    <string name="end_exercise">Zakończ ćwiczenie</string>
    <string name="ResetPasswordQuestion">Zapomniałeś/łaś hasła do konta?</string>
    <string name="reset_password">Resetowanie hasła</string>
    <string name="reset_password_email_question">Podaj adres email, na który zostało zarejestrowane konto, a zostanie na niego wysłana instrukcja dotycząca resetowania hasła do konta.</string>
    <string name="send">Wyślij</string>
    <string name="enter_email">Wprowadź email</string>
    <string name="email_send">Email został wysłany. Sprawdź skrzynkę pocztową.</string>
    <string name="alarm">Przypomnienie</string>
    <string name="maraton_app">Aplikacja Maraton</string>
    <string name="author">Autor:</string>
    <string name="author_name">Łukasz Perski</string>
    <string name="author_email">lukasz.perski.dev@gmail.com</string>
    <string name="max_question">Rekord w danym ćwiczeniu</string>
    <string name="exercise_was_skipped">Ćwiczenie zostało pominięte</string>
    <string name="skipAndEnd">Pomiń i zakończ</string>
    <string name="skip_and_end">Pomiń i zakończ</string>
    <string name="reset_password_error">Wystąpił błąd podczas resetowania hasła:</string>
    <string name="login_error">Wystąpił błąd podczas logowania:</string>
    <string name="set_reminder">Ustaw\nprzypomnienie</string>
    <string name="delete_reminder">Usuń\nprzypomnienie</string>
    <string name="actually_alarm_info">Masz ustawiony alarm na godzinę:</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="default_notification_channel_title">channel_1</string>
    <string name="evening_exercises_reminder">Przypomnienie o wieczornych ćwiczeniach</string>
    <string name="tap_to_start">Dotknij, aby otworzyć aplikację</string>
    <string name="bad_mood">Swoją jakość mowy z tego dnia oceniłeś jako ZŁĄ.</string>
    <string name="fair_mood">Swoją jakość mowy z tego dnia oceniłeś jako ŚREDNIĄ.</string>
    <string name="good_mood">Swoją jakość mowy z tego dnia oceniłeś jako DOBRĄ.</string>
    <string name="reminder_set">Przypomnienie ustawione.</string>
    <string name="generate_pdf">Wygenereuj kartę ćwiczeń</string>
    <string name="exercises_sheets">Karty ćwiczeń</string>
    <string name="exercises_sheet">Karta ćwiczeń</string>
    <string name="exercise_sheet_save">Karta ćwiczeń została wygenerowana. Sprawdź folder Maraton</string>
    <string name="exercise_title">Tytuł ćwiczenia</string>
    <string name="timer_end">Czas minął.</string>
    <string name="welcome_message">Aplikacja ma za zadanie pomóc Tobie w wykonywaniu\nćwiczeń logopedystycznych podczas terapii wymowy!</string>
    <string name="re_grant">Zapytaj ponownie</string>
    <string name="close_app">Zamknij aplikację</string>
    <string name="permissions_explain">Nadanie uprawnień jest wymagane,\naby aplikacja była w stanie działać</string>
    <string name="no_reminder">Nie masz ustawionego przypomnienia.</string>
    <string name="reminder_cancel">Przypomnienie zostało usunięte.</string>
    <string name="btn_morning_exercies">Ćwiczenia poranne</string>
    <string name="btn_evening_exercie">Ćwiczenia wieczorne</string>
    Nie jest zalecane jej używanie - spróbuj zainstalować ponownie.
</resources>
