<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_exercises_white_24dp"
            android:title="@string/exercisesList"
            />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stopwatch"
            android:icon="@drawable/ic_stopwatch_white_24dp"
            android:title="@string/stopwatch" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer_white_24dp"
            android:title="@string/timer" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_records_white_24dp"
            android:title="@string/records" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_white_24dp"
            android:title="@string/calendar" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_alarm_white_24dp"
            android:title="@string/alarm" />
    </group>
</menu>
