<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.act.reminder.ReminderActivity">


    <TimePicker
        android:id="@+id/tpReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TimePickerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
    </TimePicker>


    <com.libRG.CustomTextView
        android:textAlignment="center"
        android:id="@+id/btnSetReminder"
        android:layout_width="132dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_round_30dp_primary"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/set_reminder"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tpReminder"
        app:shadowColor="@color/colorDefaultShadowColor"
        app:shadowPercentHeight="1.05"
        app:shadowPercentWidth="0.95"
        app:shadowRadius="40dp" />

    <com.libRG.CustomTextView
        android:textAlignment="center"
        android:id="@+id/btnDeleteReminder"
        android:layout_width="132dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/bg_round_30dp_primary"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/delete_reminder"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSetReminder"
        app:layout_constraintTop_toBottomOf="@+id/tpReminder"
        app:shadowColor="@color/colorDefaultShadowColor"
        app:shadowPercentHeight="1.05"
        app:shadowPercentWidth="0.95"
        app:shadowRadius="40dp" />

    <TextView
        android:id="@+id/tvActuallyAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="32dp"
        android:text="@string/actually_alarm_info"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>