<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.timer.TimerFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.libRG.CustomTextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="19dp"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/White"
        android:textSize="48sp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:lib_setRadius="50dp"
        app:lib_setRoundedBGColor="?colorPrimary"
        app:lib_setRoundedBorderColor="?colorPrimary"
        app:lib_setRoundedView="true"
        app:lib_unCheckedDrawable="@drawable/ic_unchecked_img" />


    <com.libRG.CustomTextView
        android:id="@+id/tvMinutes"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:elevation="10dp"
        android:text="@string/minutes"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="15sp"
        app:autoSizeMinTextSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/minutePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:lib_setRadius="30dp"
        app:lib_setRoundedBGColor="?colorPrimary"
        app:lib_setRoundedBorderColor="?colorPrimary"
        app:lib_setRoundedView="true"
        app:lib_unCheckedDrawable="@drawable/ic_unchecked_img" />

    <com.libRG.CustomTextView
        android:id="@+id/tvSeconds"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:elevation="10dp"
        android:text="@string/seconds"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="15sp"
        app:autoSizeMinTextSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/secondsPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:lib_setRadius="30dp"
        app:lib_setRoundedBGColor="?colorPrimary"
        app:lib_setRoundedBorderColor="?colorPrimary"
        app:lib_setRoundedView="true"
        app:lib_unCheckedDrawable="@drawable/ic_unchecked_img" />

    <com.super_rabbit.wheel_picker.WheelPicker
        android:id="@+id/minutePicker"
        android:layout_width="55dp"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="70dp"
        android:elevation="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:align="CENTER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:max="120"
        app:min="0"
        app:selectedTextColor="?colorPrimary"
        app:textColor="@color/White"
        app:textSize="24sp"
        app:wheelItemCount="3"
        app:wrapSelectorWheel="true" />


    <com.super_rabbit.wheel_picker.WheelPicker
        android:id="@+id/secondsPicker"
        android:layout_width="55dp"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:elevation="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:align="CENTER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:max="60"
        app:min="0"
        app:selectedTextColor="?colorPrimary"
        app:textColor="@color/White"
        app:textSize="16sp"
        app:wheelItemCount="5"
        app:wrapSelectorWheel="true" />

    <com.subsub.library.BeautyButton
        android:id="@+id/btnStartTimer"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_round_30dp_primary"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/startButtonLabel"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutePicker"
        app:shadowColor="@color/colorDefaultShadowColor"
        app:shadowPercentHeight="1.05"
        app:shadowPercentWidth="0.95"
        app:shadowRadius="40dp" />



</android.support.constraint.ConstraintLayout>